@@ -1,5 +1,6 @@
 1.3.0-dev
 - ability to log from remote node to master's node build log
+- file repo formats build subfolder with 5 digits (Issue #6)
 
 1.2.4
 - run repo copy (prepareSources/copyFrom) on remote node (Issue #4)
